# rebuilderd

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  PKGBUILD  README.md  docker-compose.yml  release.sh  release.toml
.github/workflows/: binaries.yml  docker-release.yml  docker.yml  rust.yml
common/: Cargo.toml
common/src/: api.rs  auth.rs  config.rs  errors.rs  http.rs  lib.rs  utils.rs
common/src/api/: mod.rs  v0.rs
common/src/api/v0/: mod.rs
common/src/api/v1/: mod.rs
common/src/api/v1/models/: build.rs  dashboard.rs  meta.rs  mod.rs  package.rs  queue.rs  stats.rs  tag.rs  worker.rs
contrib/confs/: rebuilderd-stats.conf  rebuilderd-sync.conf  rebuilderd-worker.conf  rebuilderd.conf
contrib/docs/: rebuildctl.1.scd  rebuilderd-sync.conf.5.scd  rebuilderd-v0.yml  rebuilderd-v1.yml  rebuilderd-worker.1.scd  rebuilderd-worker.conf.5.scd  rebuilderd.1.scd  rebuilderd.conf.5.scd
contrib/examples/charts/: index.html
contrib/scripts/: merge.sql
contrib/systemd/: rebuilderd-stats.service  rebuilderd-stats.timer  rebuilderd-sync@.service  rebuilderd-sync@.timer  rebuilderd-worker@.service  rebuilderd.service  rebuilderd.sysusers  rebuilderd.tmpfiles
daemon/: .env  .gitignore  Cargo.toml  release.toml
daemon/debian/: postinst
daemon/migrations/2019-12-05-202101_setup/: down.sql  up.sql
daemon/migrations/2020-05-27-160242_retries/: down.sql  up.sql
daemon/migrations/2020-05-27-190113_priorities/: down.sql  up.sql
daemon/migrations/2020-11-07-135105_track-builds/: down.sql  up.sql
daemon/migrations/2020-12-23-025138_pkgbase/: down.sql  up.sql
daemon/migrations/2021-07-22-093726_has_diffoscope/: down.sql  up.sql
daemon/migrations/2021-08-04-171946_queue-per-distro/: down.sql  up.sql
daemon/migrations/2021-08-06-184605_add_attestation/: down.sql  up.sql
daemon/migrations/2021-10-06-132128_input-url/: down.sql  up.sql
daemon/migrations/2021-11-21-134730_build-groups/: down.sql  up.sql
daemon/migrations/2021-11-22-110050_cleanup-pkgs-table/: down.sql  up.sql
daemon/migrations/2021-11-25-002754_pkgs-table-uniq/: down.sql  up.sql
daemon/migrations/2025-05-20-210543_compress-logs/: down.sql  up.sql
daemon/migrations/2025-06-01-095202_redesign_database/: up.sql
daemon/migrations/2025-08-31-145144_package-last-seen/: up.sql
daemon/migrations/2025-11-01-202819_worker-tags/: down.sql  up.sql
daemon/migrations/2026-03-03-000000_stats-snapshots/: down.sql  up.sql
daemon/migrations/2026-03-03-000001_stats-categories/: down.sql  up.sql
daemon/migrations/2026-05-19-133853-0000_bin-pkg-components/: down.sql  up.sql
daemon/migrations/2026-05-26-093344-0000_no-src-pkg-components/: down.sql  up.sql
daemon/src/: api.rs  args.rs  attestation.rs  auth.rs  config.rs  dashboard.rs  db.rs  lib.rs  main.rs  schema.rs  stats_config.rs  sync.rs  util.rs  versions.rs  web.rs
daemon/src/api/: auth.rs  mod.rs  v0.rs
daemon/src/api/v0/: auth.rs  dashboard.rs  mod.rs
daemon/src/api/v1/: build.rs  dashboard.rs  filters.rs  meta.rs  miscellaneous.rs  mod.rs  package.rs  pagination.rs  queue.rs  stats.rs  tag.rs  worker.rs
daemon/src/api/v1/util/: auth.rs  filters.rs  friends.rs  mod.rs  pagination.rs  worker.rs
daemon/src/code_migrations/: code_migration.rs  compress_logs.rs  mod.rs
daemon/src/models/: binary_package.rs  build.rs  build_input.rs  mod.rs  package.rs  pkgbase.rs  queue.rs  rebuild.rs  rebuild_artifact.rs  source_package.rs  stats_category.rs  stats_snapshot.rs  tags.rs  worker.rs
docs/: setup-tails.md
tests/: Cargo.toml
tests/src/: args.rs  assertions.rs  lib.rs  main.rs
tests/src/actions/: mod.rs
tests/src/api/v1/: mod.rs
tests/src/api/v1/dashboard/: get_dashboard.rs  mod.rs
tests/src/api/v1/meta/: get_distribution_architectures.rs  get_distribution_components.rs  get_distribution_release_architectures.rs  get_distribution_release_component_architectures.rs  get_distribution_release_components.rs  get_distribution_releases.rs  get_distributions.rs  get_public_key.rs  mod.rs
tests/src/api/v1/package/: get_binary_package.rs  get_binary_packages.rs  get_source_package.rs  get_source_packages.rs  mod.rs  submit_package_report.rs
tests/src/api/v1/queue/: drop_queued_job.rs  drop_queued_jobs.rs  get_queued_job.rs  get_queued_jobs.rs  mod.rs  ping_job.rs  request_rebuild.rs  request_work.rs
tests/src/api/v1/stats/: collect_stats.rs  get_stats.rs  mod.rs
tests/src/api/v1/worker/: get_worker.rs  get_workers.rs  mod.rs  register_worker.rs  unregister_worker.rs
tests/src/data/: build_reports.rs  job_requests.rs  mod.rs  package_reports.rs
tests/src/fixtures/: mod.rs  server.rs
tests/src/setup/: mod.rs
tools/: Cargo.toml
tools/src/: args.rs  config.rs  decompress.rs  fancy.rs  main.rs  pager.rs  rules.rs
tools/src/schedule/: archlinux.rs  debian.rs  fedora.rs  mod.rs  tails.rs
worker/: .dockerignore  Cargo.toml  Dockerfile.alpine  Dockerfile.archlinux  Dockerfile.debian  Dockerfile.fedora  Dockerfile.nixos  Dockerfile.tails  README.md  rebuilder-archlinux.sh  rebuilder-debian.sh  rebuilder-fedora.sh  rebuilder-nixos.sh  rebuilder-tails.sh
worker/src/: args.rs  auth.rs  config.rs  diffoscope.rs  download.rs  heartbeat.rs  home.rs  main.rs  proc.rs  rebuild.rs  setup.rs
