[package]
name = "rebuilderd-common"
version = "0.16.3"
description = "rebuilderd - common code"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0"
repository = "https://github.com/kpcyrd/rebuilderd"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
log = "0.4"
serde = { version="1.0", features=["derive"] }
reqwest = { version="0.11", features=["blocking", "json"] }
chrono = { version = "0.4", features=["serde"] }
colored = "2"
dirs-next = "2"
toml = "0.5.6"
url = "2.2.2"
