[package]
name = "rebuilderd-common"
version = "0.21.0"
description = "rebuilderd - common code"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/kpcyrd/rebuilderd"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
chrono = { version = "0.4.19", features=["serde"] }
clap = "4.5.21"
colored = "2.0.0"
dirs-next = "2.0.0"
log = "0.4.17"
reqwest = { version="0.12", features=["blocking", "json"] }
serde = { version="1.0.137", features=["derive"] }
toml = "0.8"
url = "2.2.2"
