[package]
name = "rebuilderd"
version = "0.15.0"
description = "rebuilderd - independent build verification daemon"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0"
repository = "https://github.com/kpcyrd/rebuilderd"
edition = "2018"

[package.metadata.deb]
maintainer-scripts = "daemon/debian"
depends = "$auto, systemd, rebuildctl"
assets = [
    ["target/release/rebuilderd", "usr/bin/", "755"],
    ["../contrib/confs/rebuilderd.conf", "etc/", "600"],
    ["../contrib/systemd/rebuilderd.service", "usr/lib/systemd/system/", "640"],
    ["../contrib/systemd/rebuilderd.sysusers", "usr/lib/sysusers.d/rebuilderd.conf", "644"],
    ["../contrib/systemd/rebuilderd.tmpfiles", "usr/lib/tmpfiles.d/rebuilderd.conf", "644"],
]

[dependencies]
actix-web = "3"
chrono = { version = "0.4", features=["serde"] }
diesel = { version = "^1.1.0", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = { version = "1.3.0", features = ["sqlite"] }
dirs-next = "2"
dotenv = "0.15"
env_logger = "0.9"
rand = "0.8"
rebuilderd-common = { version= "=0.15.0", path="../common" }
serde = { version="1.0", features=["derive"] }
serde_json = "1.0.71"
structopt = "0.3"
toml = "0.5.6"

# https://crates.io/crates/deb-version
