[package]
name = "rebuilderd"
version = "0.21.0"
description = "rebuilderd - independent build verification daemon"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/kpcyrd/rebuilderd"
edition = "2021"

[package.metadata.deb]
maintainer-scripts = "daemon/debian"
depends = "$auto, systemd, rebuildctl"
assets = [
    ["target/release/rebuilderd", "usr/bin/", "755"],
    ["../contrib/confs/rebuilderd.conf", "etc/", "600"],
    ["../contrib/systemd/rebuilderd.service", "usr/lib/systemd/system/", "640"],
    ["../contrib/systemd/rebuilderd.sysusers", "usr/lib/sysusers.d/rebuilderd.conf", "644"],
    ["../contrib/systemd/rebuilderd.tmpfiles", "usr/lib/tmpfiles.d/rebuilderd.conf", "644"],
]

[dependencies]
actix-web = "4.1.0"
chrono = { version = "0.4.19", features=["serde"] }
diesel = { version = "1.4.8", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = { version = "1.4.0", features = ["sqlite"] }
dirs-next = "2.0.0"
dotenv = "0.15.0"
env_logger = "0.11"
log = "0.4.17"
rand = "0.8.5"
rebuilderd-common = { version= "=0.21.0", path="../common" }
serde = { version="1.0.137", features=["derive"] }
serde_json = "1.0.81"
structopt = "0.3.26"
toml = "0.8"

# https://crates.io/crates/deb-version
