[package]
name = "rebuildctl"
version = "0.19.0"
description = "rebuilderd - rebuildctl client"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0"
repository = "https://github.com/kpcyrd/rebuilderd"
edition = "2018"

[package.metadata.deb]
assets = [
    ["target/release/rebuildctl", "usr/bin/", "755"],
    ["../contrib/confs/rebuilderd-sync.conf", "etc/", "644"],
    ["../contrib/systemd/rebuilderd-sync@.service", "/usr/lib/systemd/system/", "644"],
    ["../contrib/systemd/rebuilderd-sync@.timer", "/usr/lib/systemd/system/", "644"],
]

[dependencies]
rebuilderd-common = { version= "=0.19.0", path="../common" }
structopt = "0.3.26"
env_logger = "0.9.0"
reqwest = { version="0.11.11", features=["json"] }
chrono = { version = "0.4.19", features=["serde"] }
rust-lzma = "0.5.1"
tar = "0.4.38"
flate2 = "1.0.24"
serde = { version="1.0.137", features=["derive"] }
serde_json = "1.0.81"
colored = "2.0.0"
toml = "0.5.9"
dirs-next = "2.0.0"
glob = "0.3.0"
nom = "7.1.1"
tokio = { version="1.19.2", features=["macros", "rt-multi-thread", "io-std", "io-util"] }
atty = "0.2.14"
tree_magic_mini = "3.0.3"
bzip2 = "0.4.3"
xz = "0.1.0"
zstd = { version = "0.11.2", features = ["pkg-config"] }
regex = "1.5.6"
url = "2.2.2"

[dev-dependencies]
base64 = "0.13.0"
