[package]
name = "rebuildctl"
version = "0.25.0"
description = "rebuilderd - rebuildctl client"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/kpcyrd/rebuilderd"
edition = "2021"

[package.metadata.deb]
assets = [
    ["target/release/rebuildctl", "usr/bin/", "755"],
    ["../contrib/confs/rebuilderd-sync.conf", "etc/", "644"],
    ["../contrib/systemd/rebuilderd-sync@.service", "/usr/lib/systemd/system/", "644"],
    ["../contrib/systemd/rebuilderd-sync@.timer", "/usr/lib/systemd/system/", "644"],
]

[dependencies]
bzip2 = "0.6"
chrono = { version = "0.4.19", features=["serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5.38"
colored = "3"
dirs-next = "2.0.0"
env_logger = "0.11"
flate2 = "1.0.24"
glob = "0.3.0"
nom = "8"
rebuilderd-common = { version= "=0.25.0", path="../common" }
regex = "1.5.6"
serde = { version="1.0.137", features=["derive"] }
serde_json = "1.0.81"
serde-xml-rs = "0.8"
tar = "0.4.38"
tokio = { version="1.19.2", features=["macros", "rt-multi-thread", "io-std", "io-util"] }
toml = "0.9"
tree_magic_mini = "3.0.3"
url = "2.2.2"
xz2 = "0.1"
zstd = { version = "0.13", features = ["pkg-config"] }

[dev-dependencies]
data-encoding = "2"
