[package]
name = "rebuilderd-worker"
version = "0.16.5"
description = "rebuilderd - rebuild worker"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0"
repository = "https://github.com/kpcyrd/rebuilderd"
edition = "2018"

[package.metadata.deb]
depends = "$auto, rebuilderd"
assets = [
    ["target/release/rebuilderd-worker", "usr/bin/", "755"],
    ["rebuilder-archlinux.sh", "usr/libexec/rebuilderd/", "755"],
    ["rebuilder-debian.sh", "usr/libexec/rebuilderd/", "755"],
    ["../contrib/confs/rebuilderd-worker.conf", "etc/", "640"],
    ["../contrib/systemd/rebuilderd-worker@.service", "usr/lib/systemd/system/", "640"],
]

[dependencies]
rebuilderd-common = { version= "=0.16.5", path="../common" }
structopt = "0.3"
env_logger = "0.9"
base64 = "0.13"
toml = "0.5.6"
serde = { version="1.0", features=["derive"] }
serde_json = "1"
reqwest = { version="0.11", features = ["stream"] }
tempfile = "3.1.0"
url = "2.1.1"
tokio = { version="1", features=["macros", "rt-multi-thread", "fs", "io-util", "process", "io-std", "time"] }
futures-util = "0.3.7"
futures = "0.3.7"
nix = "0.23"
in-toto = "0.1.1"
