[package]
name = "rebuilderd-worker"
version = "0.19.0"
description = "rebuilderd - rebuild worker"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0"
repository = "https://github.com/kpcyrd/rebuilderd"
edition = "2018"

[package.metadata.deb]
depends = "$auto, rebuilderd"
assets = [
    ["target/release/rebuilderd-worker", "usr/bin/", "755"],
    ["rebuilder-archlinux.sh", "usr/libexec/rebuilderd/", "755"],
    ["rebuilder-debian.sh", "usr/libexec/rebuilderd/", "755"],
    ["../contrib/confs/rebuilderd-worker.conf", "etc/", "640"],
    ["../contrib/systemd/rebuilderd-worker@.service", "usr/lib/systemd/system/", "640"],
]

[dependencies]
rebuilderd-common = { version= "=0.19.0", path="../common" }
structopt = "0.3.26"
env_logger = "0.10.0"
data-encoding = "2"
toml = "0.8"
serde = { version="1.0.137", features=["derive"] }
serde_json = "1.0.81"
reqwest = { version="0.11.11", features = ["stream"] }
tempfile = "3.3.0"
url = "2.2.2"
tokio = { version="1.19.2", features=["macros", "rt-multi-thread", "fs", "io-util", "process", "io-std", "time"] }
futures-util = "0.3.21"
futures = "0.3.21"
nix = { version = "0.27", features = ["process", "signal"] }
in-toto = "0.3"
async-trait = "0.1.56"
