[package]
name = "rebuilderd-worker"
version = "0.25.0"
description = "rebuilderd - rebuild worker"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/kpcyrd/rebuilderd"
edition = "2021"

[package.metadata.deb]
depends = "$auto, rebuilderd"
assets = [
    ["target/release/rebuilderd-worker", "usr/bin/", "755"],
    ["rebuilder-archlinux.sh", "usr/libexec/rebuilderd/", "755"],
    ["rebuilder-debian.sh", "usr/libexec/rebuilderd/", "755"],
    ["../contrib/confs/rebuilderd-worker.conf", "etc/", "640"],
    ["../contrib/systemd/rebuilderd-worker@.service", "usr/lib/systemd/system/", "640"],
]

[dependencies]
async-trait = "0.1.56"
clap = { version = "4", features = ["derive", "env"] }
data-encoding = "2"
env_logger = "0.11"
futures = "0.3.21"
futures-util = "0.3.21"
in-toto = "0.4"
nix = { version = "0.30", features = ["process", "signal"] }
rebuilderd-common = { version= "=0.25.0", path="../common" }
serde = { version="1.0.137", features=["derive"] }
serde_json = "1.0.81"
tempfile = "3.3.0"
tokio = { version="1.19.2", features=["macros", "rt-multi-thread", "fs", "io-util", "process", "io-std", "time"] }
toml = "0.9"
url = "2.2.2"
